--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
                     android:name="androidx.navigation.fragment.NavHostFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:defaultNavHost="true"
-                    android:navGraph="@navigation/navigation"/>
+                    app:defaultNavHost="true"
+                    app:navGraph="@navigation/navigation"/>
         </LinearLayout>
 
 </layout>
