--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,6 +17,6 @@
     <fragment
         android:id="@+id/gameFragment"
         android:name="com.example.android.navigation.GameFragment"
-        android:label="fragment_game"
+        android:label="GameFragment"
         tools:layout="@layout/fragment_game" />
 </navigation>
