--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -51,4 +51,9 @@
             app:destination="@id/gameFragment"
             app:popUpTo="@id/titleFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.android.navigation.RulesFragment"
+        android:label="@string/title_about_trivia"
+        tools:layout="@layout/fragment_rules" />
 </navigation>
