--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -62,4 +62,9 @@
         android:name="com.example.android.navigation.RulesFragment"
         android:label="@string/title_about_trivia"
         tools:layout="@layout/fragment_rules" />
+    <fragment
+        android:id="@+id/aboutFragment2"
+        android:name="com.example.android.navigation.AboutFragment"
+        android:label="fragment_about"
+        tools:layout="@layout/fragment_about" />
 </navigation>
