Add condition statement to lock navigation drawer

--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -3,6 +3,7 @@
 
     <item
         android:id="@+id/rulesFragment"
+        android:icon="@drawable/rules"
         android:title="@string/rules" />
     <item
         android:id="@+id/aboutFragment"
